--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:odinGitGmail/Cola.ColaEF.git"
+    "url": "git+ssh://git@github.com/odinGitGmail/Cola.ColaEF.git"
   },
   "keywords": [],
   "author": "",
