--- a/Cola.ColaEF.csproj
+++ b/Cola.ColaEF.csproj
@@ -17,6 +17,7 @@
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/odinGitGmail/Cola.ColaEF</RepositoryUrl>
         <PackageTags>Cola.ColaEF;entity framework;cola;sqlsugar</PackageTags>
+        <PackageReadmeFile>./readme.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,6 +31,15 @@
         <ProjectReference Include="..\Cola.ColaCache\Cola.ColaCache.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="icon.png"  Pack="true" PackagePath="\" />
+        <EmbeddedResource Include="icon.png">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </EmbeddedResource>
+    </ItemGroup>
+    <ItemGroup>
+        <None Include="readme.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
       <Exec Command="dotnet restore" />
     </Target>
