--- a/Cola.ColaEF.csproj
+++ b/Cola.ColaEF.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="SqlSugar.IOC" Version="2.0.0" />
         <PackageReference Include="SqlSugarCore" Version="5.1.4.60" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
